Issue #13739: In os.listdir(), rewind the directory stream (so that listdir() can be called again on the same open file).